# ComptonFitter

./: .gitignore  CEFTwrapper.cpp  CEFTwrapper.h  CMakeLists.txt  DataHandling.cpp  DataHandling.h  READme  phil_fit.cpp
cmake/Modules/: FindAPLCON.cmake
macros/: ntuple_error_study.C  ntuple_pseudo.C
reports/: Fitting.tex
src/: AB_fit.cpp  CEFTwrapper.cpp  CEFTwrapper.h  DISPwrapper.cpp  DISPwrapper.h  DataHandling.cpp  DataHandling.h  DisplayResults.cpp  DisplayResults.h  PseudoData.cpp  Pseudo_SP_fit.cpp  SP_fit.cpp  phil_fit.cpp
